removed comprimised hyperlinks

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <!-- Cookiebar if time for it
     <div class="jeffsdeliciouscookies">
-<p>This site uses cookies,<a href="http://jeff.bopedia.org/mc.disp1.mp4">because it can</a></p>
+<p>This site uses cookies,<a href="OOPS THIS ADDRESS HAS BEEN COMPRIMISED :(">because it can</a></p>
 
 <button class="cookiebutton"></button>
 -->
